--- a/requirements_20_12_24.txt
+++ b/requirements_20_12_24.txt
@@ -40,8 +40,10 @@ Pygments==2.18.0
 pyparsing==3.2.0
 pytesseract==0.3.13
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
+redis==5.2.1
 referencing==0.35.1
 requests==2.32.3
 rich==13.9.4
@@ -51,6 +53,7 @@ seaborn==0.13.2
 six==1.17.0
 smmap==5.0.1
 soupsieve==2.6
+spotipy==2.24.0
 streamlit==1.41.1
 sympy==1.13.1
 tenacity==9.0.0
