Hide collected attention model data from Git

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__
 .cache
 myenv/
 venv/
+attention_detection/data/exps/
 .DS_Store
 attention_detection/model_iterations/v1/
 attention_detection/model_iterations/v2/
