--- a/requirements_20_12_24.txt
+++ b/requirements_20_12_24.txt
@@ -1,4 +1,9 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
 altair==5.5.0
+annotated-types==0.7.0
+anyio==4.7.0
 attrs==24.3.0
 beautifulsoup4==4.12.3
 blinker==1.9.0
@@ -8,11 +13,20 @@ charset-normalizer==3.4.0
 click==8.1.7
 contourpy==1.3.1
 cycler==0.12.1
+deprecation==2.1.0
 filelock==3.16.1
 fonttools==4.55.3
+frozenlist==1.5.0
 fsspec==2024.12.0
 gitdb==4.0.11
 GitPython==3.1.43
+gotrue==2.11.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.7
+httpx==0.27.2
+hyperframe==6.0.1
 idna==3.10
 Jinja2==3.1.4
 joblib==1.4.2
@@ -24,6 +38,7 @@ MarkupSafe==3.0.2
 matplotlib==3.10.0
 mdurl==0.1.2
 mpmath==1.3.0
+multidict==6.1.0
 narwhals==1.19.0
 networkx==3.4.2
 numpy==1.26.4
@@ -32,10 +47,14 @@ packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
 plotly==5.24.1
+postgrest==0.18.0
+propcache==0.2.1
 protobuf==5.29.2
 psutil==6.1.1
 py-cpuinfo==9.0.0
 pyarrow==18.1.0
+pydantic==2.10.4
+pydantic_core==2.27.2
 pydeck==0.9.1
 Pygments==2.18.0
 pyparsing==3.2.0
@@ -44,6 +63,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
+realtime==2.0.6
 redis==5.2.1
 referencing==0.35.1
 requests==2.32.3
@@ -54,9 +74,13 @@ scipy==1.14.1
 seaborn==0.13.2
 six==1.17.0
 smmap==5.0.1
+sniffio==1.3.1
 soupsieve==2.6
 spotipy==2.24.0
+storage3==0.9.0
 streamlit==1.41.1
+supabase==2.10.0
+supafunc==0.7.0
 sympy==1.13.1
 tenacity==9.0.0
 threadpoolctl==3.5.0
@@ -71,3 +95,5 @@ tzdata==2024.2
 ultralytics==8.3.52
 ultralytics-thop==2.0.13
 urllib3==2.2.3
+websockets==13.1
+yarl==1.18.3
