--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ charset-normalizer==3.4.0
 click==8.1.7
 contourpy==1.3.1
 cycler==0.12.1
+deezer-python==7.1.1
 deprecation==2.1.0
 filelock==3.16.1
 Flask==3.1.0
