Unignore Model results

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,35 @@
 .env
 __pycache__
 .cache
-myenv/
 venv/
-attention_detection/data/exps/
 .DS_Store
-attention_detection/model_iterations/v1/
-attention_detection/model_iterations/v2/
+
 testing/
+
+attention_detection/training_data/
+
+new_venv/
+labelImg/
+
+attention_detection/model_iterations/v1/*
+attention_detection/model_iterations/v2/*
+attention_detection/model_iterations/v3/*
+attention_detection/model_iterations/v4/*
+attention_detection/model_iterations/v5/*
+
+!attention_detection/model_iterations/v1/weights/
+!attention_detection/model_iterations/v2/weights/
+!attention_detection/model_iterations/v3/weights/
+!attention_detection/model_iterations/v4/weights/
+!attention_detection/model_iterations/v5/weights/
+
+!attention_detection/model_iterations/v1/results.csv
+!attention_detection/model_iterations/v1/results.png
+!attention_detection/model_iterations/v2/results.csv
+!attention_detection/model_iterations/v2/results.png
+!attention_detection/model_iterations/v3/results.csv
+!attention_detection/model_iterations/v3/results.png
+!attention_detection/model_iterations/v4/results.csv
+!attention_detection/model_iterations/v4/results.png
+!attention_detection/model_iterations/v5/results.csv
+!attention_detection/model_iterations/v5/results.png
